--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serendiptiy-by-design",
+  "name": "serendipity-by-design",
   "version": "0.1.0",
   "private": true,
   "scripts": {
